[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/image/supply_bomb.png" type="Texture" id=1]
[ext_resource path="res://Scripts/bomb.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/get_bomb.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.2645
height = 47.2136

[node name="bomb" type="Area2D"]
position = Vector2( 29.217, -53.5645 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.561867, -1.78814e-06 )
scale = Vector2( 2.89161, 5.19526 )

[node name="get_bomb" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_bomb_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
